InternexDev_Sandbox/src/objects/Fees__c.object
<CustomObject>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fee Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Fee Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fee_description__c</fullName>
        <label>Fee Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_status__c</fullName>
        <label>Fee Status</label>
        <picklist>
            <picklistValues>
                <fullName>UNPAID</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PAID</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Servicer Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lender Expense</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fees_Due__c</fullName>
        <label>Fees Due</label>
        <summarizedField>Payment_and_Fee__c.Amount__c</summarizedField>
        <summaryForeignKey>Payment_and_Fee__c.Fees__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <label>Fees</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Frequency__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FN-{000000}</displayFormat>
        <label>Fees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_on_Updation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Fee_Amount__c) &amp;&amp; ISCHANGED(Client_Account__c ) &amp;&amp; ISCHANGED(Fee_Date__c) &amp;&amp; ISCHANGED( Fee_type__c)</errorConditionFormula>
        <errorMessage>You can not change the Fee Amount,Client-Account,Fee Date and Fee Type.</errorMessage>
    </validationRules>
</CustomObject>